# cookiecutter-poetry

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/: {{cookiecutter.module_name}}.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_{{cookiecutter.module_name}}.py
